[package]
name = "generational_array"
version = "0.1.1"
edition = "2021"
description = "A small package to handle generational arrays and prevent the ABA problem while reusing unused space"
readme = "README.md"
license = "MIT"
keywords = ["data-structure", "generational-array", "gamedev", "ecs", "array"]
categories = ["data-structures", "game-development"]
repository = "https://github.com/MaxoozX/generational_array"

[dependencies]